X-editable changelog
=============================


Version 1.3.1 wip
---------------------------- 
[enh] new util method `$.fn.editableutils.itemsByValue` to easily get selected items for sourced-inputs (vitalets)
[enh] convert newlines to <br> in error message for more pretty display (vitalets)
[enh #57] remove css height for textarea (vitalets) 
[enh] if new value for select is 'null' source should not load (vitalets) 
[enh #53] 'name' no more appended to source defined as url (vitalets) 
[enh #46] move 'img' dir outside 'css' (vitalets) 
[enh #48] fix handling of newlines in textarea input (jmfontaine) 
[enh #47] set select source to function (brianchance) 
[bug] fix inline container move on next line in IE7 (vitalets) 


Version 1.3.0 Dec 10, 2012
----------------------------  
[enh] added html5 inputs support: password, email, url, tel, number, range (vitalets) 
[bug #43] fix for bootstrap 2.2.2 (vitalets) 
[enh #41] 'abstract' class renamed to 'abstractinput' as abstract is reserved word (vitalets)
[enh #40] 'params' option defined as function overwrites original ajax data instead of appending (vitalets)
[bug] datepicker: error when click on arrows after clear date (vitalets) 
[enh] 'hidden' event: added possible value of reason param - 'nochange'. Occurs when form is submitted but value was not changed (vitalets) 
[enh] 'submit' method changed: error-callback's parameter simplified (vitalets) 
[enh] 'submit' method changed: now when response 200 OK it does not set pk automatically (vitalets) 
[enh] 'submit' method changed: removed dataType='json'. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
[enh] removed default ajax dataType='json'. Use 'ajaxOptions' to specify dataType if needed (vitalets) 
[enh] select: do not show 'sourceError' in element during autotext execution (vitalets) 


Version 1.2.0 Dec 6, 2012
----------------------------  
[enh #36] 'submit' method: added 'ajaxOptions' property to modify ajax request (vitalets)  